--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Header Section -->
   <header>
     <div class="container">
-     <u> <h1>EcoSphere Packaging Pvt. Ltd.</h1> </u>
+      <h1>EcoSphere Packaging Pvt. Ltd.</h1> 
       <nav>
         <ul>
           <li><a href="#about">About Us</a></li>
